# fieldro_bot_ws

./: idea.txt  temp.cpp  work.txt
src/fieldro_lib/: CMakeLists.txt  package.xml
src/fieldro_lib/include/fieldro_lib/controller/: unit_joy_stick_xbox.h
src/fieldro_lib/include/fieldro_lib/define/: command_define.h  communication_define.h  digital_in_define.h  direction_define.h  driving_define.h  error_code.h  unit_action_define.h  unit_state.h
src/fieldro_lib/include/fieldro_lib/device_communication/: can_wrapper.h  modbus_define.h  modbus_wrapper.h
src/fieldro_lib/include/fieldro_lib/driving_mode/: Ackermann Mode.drawio  ackermann_double.h
src/fieldro_lib/include/fieldro_lib/helper/: helper.h  thread_action_info.h  thread_pool.h
src/fieldro_lib/include/fieldro_lib/io_signal/: io_define.h  (+1 more)
src/fieldro_lib/include/motor/: double_encoder_tracker.h
src/fieldro_lib/msg/: UnitActionComplete.msg
src/fieldro_lib/src/: temp_main.cpp
src/fieldro_lib/src/controller/: unit_joy_stick_xbox.cpp  unit_joy_stick_xbox.h
src/fieldro_lib/src/device_communication/: modbus_wrapper.cpp  modbus_wrapper_485.cpp  modbus_wrapper_tcp.cpp
src/fieldro_lib/src/driving_mode/: ackermann_double.cpp
src/fieldro_lib/src/helper/: helper.cpp  thread_action_info.cpp
src/fieldro_lib/src/log/: log.cpp  log_message.cpp  log_message_queue.cpp
src/fieldro_lib/src/motor/: double_encoder_tracker.cpp
src/fieldro_lib/src/odometry/: odometry_calculator.cpp
src/fieldro_lib/src/unit/: alive_info.cpp  unit.cpp
src/fieldro_msgs/: CMakeLists.txt  package.xml
src/fieldro_msgs/msg/: IOSignal.msg  ManualControl.msg  UnitStateMsg.msg
src/fieldro_msgs/msg/unit/: UnitControl.msg
src/stock_bot/: CMakeLists.txt  package.xml
src/stock_bot/config/: driving.yaml  droid.yaml  io.yaml  joystick.yaml  lift.yaml
src/stock_bot/document/: xbox controller.drawio  xbox controller.pptx
src/stock_bot/include/droid/: droid.h
src/stock_bot/include/package/: package_helper.h  unit_define.h
src/stock_bot/include/unit_driving/: driving.h  motor_runtime_state.h  steering_position.h  zlb_drive.h  zlb_id_define.h  zlb_packet.h  zlb_resisters.h
src/stock_bot/include/unit_io/: digital_in_define.h  digital_out_define.h  wago.h
src/stock_bot/include/unit_joystick/: joystick_xbox.h  key_map.h  manual_controller.h
src/stock_bot/include/unit_lift/: eld2_rs7020b.h  eld2_rs7020b_define.h  lift.h  motion_info.h
src/stock_bot/include/unit_observer/: observer.h
src/stock_bot/launch/: stock_bot.launch
src/stock_bot/src/_node/: _droid.cpp  driving.cpp  io.cpp  joystick.cpp  lift.cpp  observer.cpp
src/stock_bot/src/droid/: croid_subscribe.cpp  droid.cpp  droid_publish.cpp  droid_subscribe.cpp  droid_unit_initialize.cpp
src/stock_bot/src/package/: package_helper.cpp
src/stock_bot/src/unit_driving/: driving.cpp  driving_action.cpp  driving_motor.cpp  driving_publish.cpp  driving_subscribe.cpp  zlb_drive.cpp  zlb_drive_action.cpp  zlb_drive_motor.cpp  zlb_drive_packet.cpp  zlb_drive_test.cpp
src/stock_bot/src/unit_io/: wago.cpp  wago_io_map.cpp  wago_message.cpp  wago_publish.cpp  wago_subscribe.cpp
src/stock_bot/src/unit_joystick/: joystick_xbox.cpp  joystick_xbox_subscribe.cpp  manual_controller.cpp
src/stock_bot/src/unit_lift/: eld2_rs7020b.cpp  lift.cpp  lift_action.cpp  lift_publish.cpp  lift_subscribe.cpp
src/stock_bot/src/unit_observer/: observer.cpp  observer_publish.cpp  observer_subscribe.cpp
src/trash_bot/: CMakeLists.txt  package.xml
src/trash_bot/config/: driving.yaml  droid.yaml  io.yaml  loader.yaml  observer.yaml  sample.yaml  unit.yaml
src/trash_bot/document/: Loader.drawio  LongRunTest Flow.drawio  Odometry Diagram.drawio  Unit Class.drawio  class diagram.drawio
src/trash_bot/include/driving_unit/: driving.h  zlb_drive.h  zlb_id_define.h  zlb_packet.h  zlb_resisters.h  zlb_status.h  zlb_steer.h  zlb_traction.h
src/trash_bot/include/droid/: droid.h
src/trash_bot/include/io_unit/: io_define.h  signal_info.h  wago.h
src/trash_bot/include/loader_unit/: eld2_rs7020b.h  eld2_rs7020b_define.h  loader.h  loader_define.h  motion_info.h
src/trash_bot/include/observer_unit/: alive_info.h  observer.h  unit_alive_info.h  unit_observer.h
src/trash_bot/include/package/: unit_define.h
src/trash_bot/launch/: trash_bot.launch
src/trash_bot/lib_header/communication/: can_wrapper.h  comm_define.h  modbus_define.h  modbus_wrapper.h
src/trash_bot/lib_header/define/: command_define.h  communication_define.h  digital_in_define.h  digital_out_define.h  direction_define.h  error_code.h  unit_action_define.h  unit_define.h  unit_state.h
src/trash_bot/lib_header/helper/: enum_template.h  helper.h  link_checker.h  thread_action_info.h
src/trash_bot/lib_header/log/: log.h  log_message.h  log_message_queue.h
src/trash_bot/lib_header/observer_unit/: unit_alive_info.h  unit_observer.h
src/trash_bot/lib_header/odometry/: motor_metrics.h  odometry_calculator.h
src/trash_bot/lib_header/unit/: unit.h
src/trash_bot/lib_header/unit_observer/: unit_observer.h
src/trash_bot/msg/: UnitAliveMsg.msg  UnitControl.msg  UnitState.msg  UnitStateMsg.msg
src/trash_bot/src/_node/: driving_node.cpp  droid_node.cpp  io_node.cpp  loader_node.cpp  observer_node.cpp
src/trash_bot/src/driving_unit/: driving.cpp  driving_subscribe.cpp  zlb_drive.cpp  zlb_drive_action.cpp  zlb_drive_callback.cpp  zlb_drive_motor.cpp  zlb_drive_packet.cpp  zlb_drive_test.cpp  zlb_steer.cpp  zlb_traction.cpp
src/trash_bot/src/droid/: droid.cpp  droid_message.cpp  droid_publish.cpp  droid_subscribe.cpp  droid_unit_control.cpp  droid_unit_initialize.cpp  droid_unit_link.cpp
src/trash_bot/src/io_unit/: wago.cpp  wago_io_map.cpp  wago_message.cpp
src/trash_bot/src/loader_unit/: eld2_rs7020b.cpp  loader.cpp  loader_action.cpp  loader_publisher.cpp  loader_subscribe.cpp
src/trash_bot/src/observer_unit/: alive_info.cpp  observer.cpp  observer_publish.cpp  observer_subscribe.cpp  unit_alive_info.cpp  unit_observer.cpp  unit_observer_publish.cpp
src/trash_bot/src/unit_base_sample/: unit_sample.cpp  unit_sample.h
(+682 files in other folders)
