<?xml version="1.0"?>
<package format="2">
  <name>fieldro_lib</name>
  <version>0.0.0</version>
  <description>The fieldro_lib package</description>

<maintainer email="haloc@fieldro.tech">twinny</maintainer>

  <license>TODO</license>

  <url type="website">https://fieldro.tech/</url>
  <url type="issue">https://github.com/haloc74/trash_bot/issues</url>
  <url type="repository">https://github.com/haloc74/trash_bot</url>

  <author email="haloc@fieldro.tech">Donggi Choi</author>
  <author email="haloc74@gmail.com">Donggi Choi</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>fieldro_msg</build_depend>

  <build_depend>UnitActionComplete</build_depend>
  <build_depend>UnitControl</build_depend>  
  <build_depend>UnitAliveMsg</build_depend>


  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <build_export_depend>UnitActionComplete</build_export_depend>
  <build_export_depend>UnitControl</build_export_depend>
  <build_export_depend>UnitAliveMsg</build_export_depend>
  <build_export_depend>fieldro_msg</build_export_depend>


  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>UnitActionComplete</exec_depend>
  <exec_depend>UnitControl</exec_depend>
  <exec_depend>UnitAliveMsg</exec_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
