<?xml version="1.0"?>
<package format="2">
  <name>fieldro_msgs</name>
  <version>0.0.0</version>
  <description>The fieldro_msgs package</description>

  <maintainer email="haloc@fieldro.tech">twinny</maintainer>

  <license>TODO</license>

  <url type="website">https://fieldro.tech/</url>
  <url type="issue">https://github.com/haloc74/fieldro_msg/issues</url>
  <url type="repository">https://github.com/haloc74/fieldro_msg</url>

  <author email="haloc@fieldro.tech">Donggi Choi</author>
  <author email="haloc74@gmail.com">Donggi Choi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>