<?xml version="1.0"?>
<package format="2">
  <name>stock_bot</name>
  <version>0.0.0</version>
  <description>The stock_bot package</description>

  <maintainer email="haloc@fieldro.tech">twinny</maintainer>

  <license>TODO</license>

  <url type="website">https://fieldro.tech/</url>
  <url type="issue">https://github.com/haloc74/stock_bot/issues</url>
  <url type="repository">https://github.com/haloc74/stock_bot</url>

  <author email="haloc@fieldro.tech">Donggi Choi</author>
  <author email="haloc74@gmail.com">Donggi Choi</author>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>fieldro_lib</build_depend>
  <build_depend>fieldro_msgs</build_depend>
  <build_depend>twinny_msgs</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>fieldro_lib</build_export_depend>
  <build_export_depend>fieldro_msgs</build_export_depend>
  <build_export_depend>twinny_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>fieldro_lib</exec_depend>
  <exec_depend>fieldro_msgs</exec_depend>  
  <exec_depend>twinny_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
